--- a/simplenginx.conf
+++ b/simplenginx.conf
@@ -36,7 +36,9 @@ map $http_accept_language $lang {
 }
 
 server {
-    listen 80;
+    listen 80 default_server;
+
+    server_name _;
 
     access_log /var/log/nginx/access_mempool.log;
     error_log /var/log/nginx/error_mempool.log;
