--- a/backend/mempool-config.sample.json
+++ b/backend/mempool-config.sample.json
@@ -45,9 +45,7 @@
     "USERNAME": "mempool",
     "PASSWORD": "mempool",
     "TIMEOUT": 60000,
-    "COOKIE": false,
-    "COOKIE_PATH": "/path/to/bitcoin/.cookie",
-    "DEBUG_LOG_PATH": "/path/to/bitcoin/debug.log"
+    "COOKIE": false
   },
   "ELECTRUM": {
     "HOST": "127.0.0.1",
@@ -70,14 +68,13 @@
     "USERNAME": "mempool",
     "PASSWORD": "mempool",
     "TIMEOUT": 60000,
-    "COOKIE": false,
-    "COOKIE_PATH": "/path/to/bitcoin/.cookie"
+    "COOKIE": false
   },
   "DATABASE": {
     "ENABLED": true,
     "HOST": "127.0.0.1",
     "PORT": 3306,
-    "SOCKET": "/var/run/mysql/mysql.sock",
+    "SOCKET": "/var/run/mysqld/mysqld.sock",
     "DATABASE": "mempool",
     "USERNAME": "mempool",
     "PASSWORD": "mempool",
@@ -128,10 +125,7 @@
     "PASSWORD": ""
   },
   "EXTERNAL_DATA_SERVER": {
-    "MEMPOOL_API": "https://mempool.space/api/v1",
-    "MEMPOOL_ONION": "http://mempoolhqx4isw62xs7abwphsq7ldayuidyx2v2oethdhhj6mlo2r6ad.onion/api/v1",
-    "LIQUID_API": "https://liquid.network/api/v1",
-    "LIQUID_ONION": "http://liquidmom47f6s3m53ebfxn47p76a6tlnxib3wp6deux7wuzotdr6cyd.onion/api/v1"
+    "MEMPOOL_API": "https://blocks.deveac.com/api/v1"
   },
   "REDIS": {
     "ENABLED": false,
@@ -152,11 +146,11 @@
     ]
   },
   "MEMPOOL_SERVICES": {
-    "API": "https://mempool.space/api/v1/services",
+    "API": "https://blocks.deveac.com/api/v1/services",
     "ACCELERATIONS": false
   },
   "FIAT_PRICE": {
-    "ENABLED": true,
+    "ENABLED": false,
     "PAID": false,
     "API_KEY": "your-api-key-from-freecurrencyapi.com"
   }
